--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",  
-    "client": "npm start --prefix client"  
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client"
   },
   "dependencies": {
+    "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.6.2",
-    "dotenv": "^16.4.5",
-    "concurrently": "^9.0.1" 
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
