--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",  
-    "client": "npm start --prefix client"  
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.6.2",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "concurrently": "^9.0.1" 
+    "express": "^4.18.2",
+    "mongoose": "^8.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
