--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "mongoose": "^8.6.2",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.7.5",
